--- a/BE/.env
+++ b/BE/.env
@@ -3,5 +3,5 @@ DB_NAME=postgresql_db
 DB_USERNAME=host
 DB_PASSWORD=mysecretpassword
 DB_HOST=localhost
-DB_URL=postgres://host:mysecretpassword@localhost:5432/postgresql_db?sslmode=disable
+DB_URL=postgresql://postgresql_db_owner:QOzom6i1ucgT@ep-tiny-sunset-a1zo1w22.ap-southeast-1.aws.neon.tech/postgresql_db?sslmode=require
 
