--- a/FE/package.json
+++ b/FE/package.json
@@ -10,6 +10,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@react-spring/web": "^9.7.4",
 		"axios": "^1.7.4",
 		"next": "14.2.3",
 		"nextjs": "^0.0.3",
